--- a/www/views/view.html
+++ b/www/views/view.html
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-md-4">
-		<a ng-click="toggleAttendees()"><span ng-class="attendeeButtonClass"></span> <span ng-show="collapseAttendees">Show Attendees</span><span ng-hide="collapseAttendees">Hide Attendees</span></a>
+		<a ng-click="toggleAttendees()"><span class="glyphicon" ng-class="{ 'glyphicon-eye-open': collapseAttendees == true, 'glyphicon-eye-close': collapseAttendees == false }"></span> <span ng-show="collapseAttendees">Show Attendees</span><span ng-hide="collapseAttendees">Hide Attendees</span></a>
 		<table class="table table-hover" collapse="collapseAttendees">
 			<thead>
 				<tr>
@@ -35,6 +35,7 @@
 			<td><strong>Items</strong></td>
 			<td><strong>Owner</strong></td>
 			<td><strong>Minutes</strong></td>
+			<td></td>
 		</tr>
 	</thead>
 
@@ -82,6 +83,9 @@
 									<p class="minutes"><span editable-textarea="subminutes.content" onbeforesave="updateMinutes(subitem, $index, $data)" e-rows="5" e-cols="40">{{ subminutes.content }}</span></p>
 								</span>
 							</td>
+
+							<td>
+								<a  ng-click="deleteItem(subitem, $index)"><span class="glyphicon glyphicon-trash"></span></a>
 						</tr>
 					</tbody>
 
@@ -93,6 +97,9 @@
 						</tr>
 					</tfoot>
 				</table>
+			</td>
+			<td>
+				<a ng-click="deleteItem(item, $index)"><span class="glyphicon glyphicon-trash"></span></a>
 			</td>
 		</tr>
 	</tbody>
